added HAM technician

--- a/src/app/sections/certifications/certifications.html
+++ b/src/app/sections/certifications/certifications.html
@@ -64,11 +64,27 @@
       <p class="mt-2 text-neutral-600">Some other cool stuff I picked up along the way.</p>
     </div>
 
+    <!-- Other Certs -->
+
     <div class="mt-2 grid gap-8 md:grid-cols-2">
+      <!-- HAM Technician -->
+      <div revealOnScroll class="reveal-left">
+        <div
+          class="flex gap-4 rounded-2xl border p-6 shadow-sm bg-white hover:shadow-xl transition duration-300 hover:shadow-emerald-500/20 hover:ring-1 hover:ring-emerald-400/40"
+        >
+          <img src="arrl.png" alt="HAM" class="h-24 w-24 object-contain rounded-2xl" />
+          <div>
+            <h3 class="text-xl font-bold">HAM Technician</h3>
+            <p class="mt-1 text-neutral-600">FCC regulations and radio communication.</p>
+            <p class="mt-2 text-sm text-neutral-500">Earned 2024</p>
+          </div>
+        </div>
+      </div>
+
       <!-- Bloomberg -->
       <div
         revealOnScroll
-        class="reveal-left flex gap-4 rounded-2xl border p-6 shadow-sm bg-white hover:shadow-xl transition duration-300 hover:shadow-emerald-500/20 hover:ring-1 hover:ring-emerald-400/40"
+        class="reveal-right flex gap-4 rounded-2xl border p-6 shadow-sm bg-white hover:shadow-xl transition duration-300 hover:shadow-emerald-500/20 hover:ring-1 hover:ring-emerald-400/40"
       >
         <img src="bloomberg.jpg" alt="Bloomberg" class="h-24 w-24 object-contain rounded-2xl" />
         <div>
@@ -79,7 +95,7 @@
       </div>
 
       <!-- Bloomberg -->
-      <div revealOnScroll class="reveal-right">
+      <div revealOnScroll class="reveal-left">
         <div
           class="flex gap-4 rounded-2xl border p-6 shadow-sm bg-white hover:shadow-xl transition duration-300 hover:shadow-emerald-500/20 hover:ring-1 hover:ring-emerald-400/40"
         >
@@ -93,7 +109,7 @@
       </div>
 
       <!-- MATLAB -->
-      <div revealOnScroll class="reveal-left">
+      <div revealOnScroll class="reveal-right">
         <div
           class="flex gap-4 rounded-2xl border p-6 shadow-sm bg-white hover:shadow-xl transition duration-300 hover:shadow-emerald-500/20 hover:ring-1 hover:ring-emerald-400/40"
         >
